--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
 
 
-  <title>About us</title> 
+  <title>About Me</title> 
   <link rel = "icon" type = "image/png" href = ./assets/cake.png>
     <!-- For apple devices -->
     <link rel = "apple-touch-icon" type = "image/png" href = "./assets/cake.png"/> 
@@ -64,7 +64,7 @@
            <i class="fa fa-facebook"></i>
           </a>
         </p>
-        <p>© Untitled | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>© Untitled | Website created by ziora</p>
       </nav>  
     </div> 
   </nav>
@@ -73,7 +73,6 @@
 
 <section id="app-aboutus" class="section section-team text-center">
       <div class="container">
-        <h2 id="heading-secondary">Our Team</h2><br>
         <div class="team mt-5">
           <div class="row">
             <div class="col-md-4">
@@ -94,32 +93,13 @@
               </div>
             </div><br>
 
-    
-            <div class="col-md-4">
-              <div class="team-player">
-                <img src="./assets/images/director.jpg" width="200" height="200" class="img-circle">
-                <h4>Okwuego ziora</h4>
-                <p class="category text-primary"><strong>Director</strong></p>
-                <p class="description">
-                  Who created this website, its me of course Am web developer, i make and design websites.
-                </p>
-                <a href="https://web.facebook.com/ziora.okwuego" class="btn btn-primary btn-icon btn-round">
-                  <i class="fa fa-facebook"></i>
-                </a>
-                </a>
-                <a href="https://www.instagram.com/robertgram3/" class="btn btn-primary btn-icon btn-round">
-                  <i class="fa fa-instagram"></i>
-                </a>
-              </div>
-            </div>
-
           </div>
         </div>
       </div>
     </section><br>
-    <h3>About us</h3>
+    <h3>About Me</h3>
     
-    <strong><p>In Our Company we produce high quality cakes that dont only look good, but tastes good we keep them in good conditions and in good state. The deliveries are also fast and efficient have a nice day (cakes made with love).</p></strong>
+    <strong><p>In Our Company we produce high quality cakes that dont only look good, but tastes good we keep them in good conditions and in good state. The deliveries are also fast and efficient have a nice day (cakes Baked with love).</p></strong>
 
  </div>
 </div>
