--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
              <i class="fa fa-facebook"></i>
           </a>
         </p>
-        <p>© Untitled | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>© Untitled | Website created by ziora </p>
       </nav>  
     </div> 
   </nav>
@@ -74,25 +74,25 @@
 <div class="row">
   <div class="col-xs-12 section-container-spacer">
     <h1>Services</h1>
-    <p>In our business we bake make lots of flavours and types of cake for example we have Vanilla, Choclate, Strawberry, Red velvet, Bluberies and other flavours. </p>
+    <p>In our business we bake make lots of flavours and types of cake for example we have Vanilla, Choclate, Strawberry, Red velvet, Bluberies and other flavours. We can also change the designs and flavours you want as long as your satisfied (Cakes baked with love) </p>
   </div>
 
   <div class="col-xs-12 col-md-4 section-container-spacer">
     <img class="img-responsive" alt="" src="./assets/images/cake5.jpg">
-    <h2>Vanilla</h2>
-    <a href="./contact.html" class="btn btn-primary" title=""> Get in touch</a>
+    <h2>Classic</h2>
+    <a href="./contact.html" class="btn btn-primary" title=""> Order</a>
   </div>
 
   <div class="col-xs-12 col-md-4 section-container-spacer">
     <img class="img-responsive" alt="" src="./assets/images/cake1.jpg">
-    <h2>Red velvet</h2>
-    <a href="./contact.html" class="btn btn-primary" title=""> Get in touch</a>
+    <h2>Simple</h2>
+    <a href="./contact.html" class="btn btn-primary" title=""> Order</a>
   </div>
 
   <div class="col-xs-12 col-md-4 section-container-spacer">
-    <img class="img-responsive" alt="" src="./assets/images/cake2.jpg">
-    <h2>Choclate</h2>
-    <a href="./contact.html" class="btn btn-primary" title=""> Get in touch</a>
+    <img class="img-responsive" alt="" src="./assets/images/cake4.jpg">
+  <h2>Event</h2>
+    <a href="./contact.html" class="btn btn-primary" title=""> Order </a>
   </div>
 
 </div>
