--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   
 
 
-  <title>Contact Us</title>
+  <title>Contact Me</title>
   <link rel = "icon" type = "image/png" href = ./assets/cake.png>
     <!-- For apple devices -->
     <link rel = "apple-touch-icon" type = "image/png" href = "./assets/cake.png"/>
@@ -66,7 +66,7 @@
                 <i class="fa fa-facebook"></i>
           </a>
         </p>
-        <p>© Untitled | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>© Untitled | Website created by ziora</p>
       </nav>  
     </div> 
   </nav>
@@ -83,13 +83,13 @@
               <span class="fa-icon">
                 <i class="fa fa-phone" aria-hidden="true"></i>
               </span>
-              +23409035734778
+              +2348033311346
             </li>
             <li>
               <span class="fa-icon">
                 <i class="fa fa-at" aria-hidden="true"></i>
               </span>
-              zoirsokwuego@gmail.com
+              luvlyada@gmail.com
             </li>
             <li>
               <span class="fa-icon">
