--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
               <i class="fa fa-facebook"></i>
           </a>
         </p>
-        <p>© Untitled | Website created with <a href="http://www.mashup-template.com/" title="Create website with free html template">Mashup Template</a>/<a href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></p>
+        <p>© Untitled | Website created By ziora </p>
       </nav>  
     </div> 
   </nav>
