--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-	 <title>startup</title>
+   <title>startup</title>
      <!-- Required meta tags -->
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,16 +11,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-     
+
      <link href="https://fonts.googleapis.com/css2?family=Caladea:ital@1&display=swap" rel="stylesheet">
      <!-- your own stylesheet -->
      <link rel="stylesheet" type="text/css" href="style.css">
      <a href="index2.html"></a>
    </head>
  <body>
-	<div class="container d-flex align-items-center h-100">
-	    <div class="row">
-	       <header class="text-center col-12">
+  <div class="container d-flex align-items-center h-100">
+      <div class="row">
+         <header class="text-center col-12">
+              <h2 class="animate__animated animate__headShake"><strong>THE BIGGEST STARTUP EVENT OF THE YEAR</strong></h2>
               <h1 class="animate__animated animate__zoomInDown"><strong>ADORABLE CAKES</strong></h1>
            </header>
            <div class="buffer col-12"></div>
