--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
               <i class="fa fa-facebook"></i>
           </a>
         </p>
-        <p>© Untitled | Website created By ziora </p>
+        <p>© Untitled | Website created By ZIORA </p>
       </nav>  
     </div> 
   </nav>
