--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
            <i class="fa fa-facebook"></i>
           </a>
         </p>
-        <p>© Untitled | Website created by ziora</p>
+        <p>© Untitled | Website created by ZIORA</p>
       </nav>  
     </div> 
   </nav>
