--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                 <i class="fa fa-facebook"></i>
           </a>
         </p>
-        <p>© Untitled | Website created by ziora</p>
+        <p>© Untitled | Website created by ZIORA</p>
       </nav>  
     </div> 
   </nav>
