--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
               <span class="fa-icon">
                 <i class="fa fa-at" aria-hidden="true"></i>
               </span>
-              luvlyada@gmail.com
+               <a href="https://mail.google.com/mail/">luvlyada@gmail.com </a>                                
             </li>
             <li>
               <span class="fa-icon">
@@ -101,7 +101,7 @@
               <span class="fa-icon">
                 <i class="fa fa-whatsapp" aria-hidden="true"></i>
               </span>
-              whatsapp +2348033311346
+              <a href="https://wa.me/2348033311346/?text=goodday%20i%20want%20to%20order%20a%20cake%20"> whatsapp +2348033311346</a> 
             </li>
           </ul>
           <h3>Follow me on social networks</h3>
