--- a/index2.html
+++ b/index2.html
@@ -35,7 +35,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="./index.html" class="navbar-brand">Adorable cakes</a>
+    <a href="./index.html" class="navbar-brand"><strong>Adorable cakes</strong></a>
   </div>
 
   <nav class="sidebar">
@@ -63,7 +63,7 @@
               <i class="fa fa-facebook"></i>
           </a>
         </p>
-        <p>© Untitled | Website created By ZIORA </p>
+        <p>© Untitled | Website created By <a href="https://web.facebook.com/ziora.okwuego">ZIORA</a>.</p>
       </nav>  
     </div> 
   </nav>
@@ -150,6 +150,8 @@
     
   </div>
 </div>
+<footer><h5>For more cakes visit my instagram page at 
+  <p><a href="https://www.instagram.com/the_adorablecakes/">adorable cakes</a></h5></p></footer>
 
 
 <script>
