--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   <div class="container d-flex align-items-center h-100">
       <div class="row">
          <header class="text-center col-12">
-              <h2 class="animate__animated animate__headShake"><strong>THE BIGGEST STARTUP EVENT OF THE YEAR</strong></h2>
-              <h1 class="animate__animated animate__zoomInDown"><strong>ADORABLE CAKES</strong></h1>
+              <h1 class="animate__animated animate__headShake"><strong>THE BIGGEST STARTUP EVENT OF THE YEAR</strong></h2>
+              <h2 class="animate__animated animate__zoomInDown"><strong>ADORABLE CAKES</strong></h1>
            </header>
            <div class="buffer col-12"></div>
            <section class="text-center col-12">
              <hr>
-             <a href="index2.html"><button class="btn btn-primary btn-x1"><h5 class="animate__animated animate__headShake">find out more<h5/></button>
+             <a href="index2.html"><button class="btn btn-primary btn-x1 animate__animated animate__headShake">find out more</button>
              </a>
            </section>
         </div> 
