--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
               <span class="fa-icon">
                 <i class="fa fa-at" aria-hidden="true"></i>
               </span>
-               <a href="https://mail.google.com/mail/">luvlyada@gmail.com </a>                                
+               <a href="http://eepurl.com/g4KxQ5">luvlyada@gmail.com </a>                                
             </li>
             <li>
               <span class="fa-icon">
